# riverdi-eve-demo-esp32

./: CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  platform.c  platform.h  riverdi-demo.c
